# event-calendars

./: .gitignore  .pre-commit-config.yaml  README.md  dates.ical  dates.ics  pyproject.toml  run-all-spiders.py  scrapy.cfg  update-readme.py
.github/: dependabot.yml
.github/workflows/: issue.yaml  lint-workflows.yaml  pre-commit-autoupdate-pr.yaml  scrape.yaml  test.yaml
communitybikeways/: exporters.py  items.py  settings.py
communitybikeways/spiders/: events.py
event_calendars/: exporters.py  fb_graphql.py  fb_graphql_test.py  filters.py  items.py  middleware.py  middleware_worker.py  pipelines.py  readabledelta.py  settings.py  text_content.py  timezone_lookup.py  utils.py
event_calendars/cli/: runall.py
event_calendars/spiders/: __init__.py  burlington_green.py  burlington_hamilton_ymca.py  burlington_hamilton_ymca_test.py  burlington_pools.py  cycleto.py  everyonerides.py  httpbin.py  merge.py  newhope.py  registry.py  registry_test.py  respect_cyclists.py  respect_cyclists_test.py  test_all_spiders_can_be_loaded.py  toronto_community_bikeways.py  toronto_community_bikeways_test.py  whoami.py  ymca_burlington.py  ymca_burlington_hamilton.py  ymca_hamilton.py
event_calendars/spiders/fb-har/: www.facebook.com.har
test_data/: burlington-green-event-30298.html  burlington-green-event-30298.json  burlington-green-events.json  burlington-perfectmind-booking-pages-v2-classes-v2-20260329.json  burlington-perfectmind-booking-pages-v2_get_request_verification_token.html  communitybikewaysto.ca-event-west-scarborough.html  communitybikewaysto.ca-event-west-scarborough.ics  communitybikewaysto.ca-events.html  cycleto-ca-events.html  cycleto.ca-event-cdoyr-2026.html  everyonerides-org-bike_share_birthday_party.html  everyonerides-org-events.html  facebook-events-2533827373664092.html  facebook-events-783985534010634.html  facebook-events-789092220770764.html  facebook-respectcyclists-event-789092220770764-curl.html  facebook-respectcyclists-events-list.html  fb_graphql_types-compact.json  fb_graphql_types-event.json  fb_graphql_types-group.json  fb_graphql_types.json  newhope-tourdecafe-facebook-1936571343795753.html  newhope-tourdecafe-facebook-groups-643937107228046-events.html  newhope-tourdecafe.html  ymca-event-data-page-2026-03-14.json
tests/: conftest.py  test_assumptions_html_entities.py  test_assumptions_ics_sort_order.py  test_description_dates.py  test_description_locations.py  test_exporters.py  test_extract_text_visitor.py  test_fb_graphql.py  test_middleware_can_replace_response_body.py  test_middleware_worker.py  test_readable_text_content.py  test_reverse_zone_lookup.py  test_text_extractor.py
tests/spiders/: test_burlington_hamilton_ymca.py  test_burlington_pools.py  test_burlingtongreen.py  test_burlingtongreen_html.py  test_cycleto-ca.py  test_everyonerides.py  test_httpbin.py  test_newhope_fb.py  test_newhope_www.py  test_respect_cyclists.py  test_toronto_community_bikeways.py
