[project]
name = "communitybikeways-events-ical"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "html2text>=2025.4.15",
    "icalendar>=7.0.0",
    "pytz>=2025.1",
    "scrapy>=2.14.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
